# schaken

./: CMakeLists.txt  README.md  beoordeling.docx  bishop.cpp  bishop.h  board.cpp  board.h  gamecontroller.cpp  gamecontroller.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  resources.qrc  rook.cpp  rook.h  squareitem.cpp  squareitem.h  test_board.cpp  test_board.h
